# mtn-consensus

./: .gitignore  README.md  SECURITY.md  SECURITY_VI.md  TODO.md  config1_sv.json  config2_sv.json  config3.json  config3_sv.json  config4.json  config4_sv.json  config5_sv.json  extract.py  extract_block.py  extract_commit.py  extract_methods.py  fix_args.py  fix_core.py  fix_methods.py  fix_proposer.py  go.mod  go.sum  kill.sh  list_methods.py  main.go  mkdocs.yml  run.sh  temp_script.sh  test_lvm_config.sh  test_sudo_snapshot.sh  update_lib.py  update_proposer.py  zip.sh
client/: README.md  spam_submit.sh
cmd/binaryagreement/: main.go
cmd/binaryagreement2/: main.go
cmd/demo/: main.go
cmd/hbbft/: main.go  network.go  server.go  (+1 more)
crates/telemetry-subscribers/: Cargo.toml
crates/telemetry-subscribers/src/: file_exporter.rs  span_latency_prom.rs
docs/: committee_loading_vi.md  epoch-transition-fork-prevention-vi.md  index.md  synchronization_analysis.md  synconly-to-validator-transition-vi.md
metanode/: Cargo.toml  Readme.md  auto_restore.sh  build.rs  check.err  check_keys.py  simple_test.sh  transaction_flow.md  wait_and_restore.sh
metanode/config/: committee.json  node_0.toml  node_0_network_key.json  node_0_protocol_key.json  node_1.toml  node_1_network_key.json  node_1_protocol_key.json  node_2.toml  node_2_network_key.json  node_2_protocol_key.json  node_3.toml  node_3_network_key.json  node_3_protocol_key.json  node_4.toml  node_4_network_key.json  node_4_protocol_key.json  node_network_example.toml  single_node.toml
metanode/deploy/: install-services.sh  metanode-go-master@.service  metanode-go-sub@.service  metanode-rust@.service
metanode/meta-consensus/config/src/: crypto.rs
metanode/meta-consensus/config/tests/snapshots/: parameters_test__parameters.snap
metanode/meta-consensus/core/: Cargo.toml  fix_all.py  fix_args.py  fix_args2.py  fix_core_thread.py
metanode/meta-consensus/core/benches/: transaction_throughput_bench.rs
metanode/meta-consensus/core/src/: adaptive_delay.rs  ancestor.rs  authority_node.rs  authority_service.rs  base_committer.rs  block_manager.rs  block_verifier.rs  broadcaster.rs  commit.rs  commit_consumer.rs  commit_finalizer.rs  commit_observer.rs  commit_syncer.rs  core.rs  core_signals.rs  core_tests.rs  core_thread.rs  dag_state.rs  epoch_change_provider.rs  leader_schedule.rs  leader_scoring.rs  leader_timeout.rs  legacy_store.rs  lib.rs  linearizer.rs  metrics.rs  reconfiguration.rs  round_prober.rs  round_tracker.rs  subscriber.rs  synchronizer.rs  system_transaction_provider.rs  test_dag_parser.rs  transaction.rs  transaction_certifier.rs
metanode/meta-consensus/core/src/core/: block_importer.rs  commit_manager.rs  proposer.rs  proposer_methods.rs
metanode/meta-consensus/core/src/dag_state/: dag_state_impl.rs  mod.rs  query.rs  read.rs  types.rs  write.rs
metanode/meta-consensus/core/src/network/: metrics.rs  network_tests.rs  test_network.rs  tonic_network.rs
metanode/meta-consensus/core/src/storage/: mem_store.rs  mod.rs  rocksdb_store.rs
metanode/meta-consensus/core/src/tests/: base_committer_declarative_tests.rs  base_committer_tests.rs  pipelined_committer_tests.rs  randomized_tests.rs  universal_committer_tests.rs
metanode/meta-consensus/meta-http/: Cargo.toml
metanode/meta-consensus/meta-tls/src/: acceptor.rs  lib.rs
metanode/monitoring/: README.md  monitor.py  start_monitor.sh  wsgi.py
metanode/proto/: executor.proto  validator_rpc.proto
metanode/scripts/: CLUSTER_OPERATIONS.md  README_FULL_SYSTEM.md  analyze_node_stuck.sh  mtn-orchestrator.sh  script.sh  sync_committee_to_genesis.py  test_genesis_mismatch.sh  test_genesis_mismatch_multi_epoch.sh  test_restart_loop.sh  test_single_restart.sh  test_system.sh  trace_transaction.sh  update_committee_from_genesis.py
metanode/scripts/analysis/: README_TPS.md  analyze_bad_nodes.sh  analyze_epoch_transition.sh  analyze_stuck_system.sh  analyze_vote_propagation.sh  calculate_real_tps.sh  calculate_tps.sh  check_epoch_status.sh  tps_simple.sh  verify_epoch_transition.sh
metanode/scripts/logs/: follow.sh  go-master.sh  go-sub.sh  rust.sh  view.sh
metanode/scripts/node/: DEPLOY.md  DEPLOY_GUIDE_NODE0.md  OPERATIONS_GUIDE.md  QUICKSTART_LOCALHOST.md  SNAPSHOT_RESTORE_GUIDE_VN.md  build.sh  check_blocks.sh  check_blocks_rpc.sh  deploy.env  deploy_cluster.sh  deploy_status.sh  deploy_stop.sh  fresh_restart.sh  fresh_restart_with_sync.sh  reset_node.sh  restart.sh  restore_node.sh  resume_all.sh  resume_node.sh  resume_node_ai.sh  run_all.sh  run_all_validator.sh  run_node.sh  run_node_0.sh  run_nodes_123.sh  setup_firewall.sh  stop_all.sh  stop_node.sh  stop_node_ai.sh  test_snapshot_restore.sh  test_snapshot_restore_ai.sh  update_ips.sh
metanode/scripts/node/docs/: manual_snapshot_restore.md
metanode/src/: config.rs  main.rs
metanode/src/consensus/: checkpoint.rs  commit_processor.rs  tx_recycler.rs
metanode/src/network/: rpc.rs  tx_socket_server.rs
metanode/src/network/peer_rpc/: client.rs  mod.rs  server.rs  types.rs
metanode/src/node/: block_coordinator.rs  catchup.rs  committee.rs  committee_source.rs  consensus_node.rs  dual_stream.rs  epoch_checkpoint.rs  epoch_monitor.rs  epoch_transition_manager.rs  epoch_transition_tests.rs  mod.rs  node_methods.rs  notification_server.rs  peer_go_client.rs  peer_health.rs  queue.rs  startup.rs  sync.rs  sync_metrics.rs
metanode/src/node/executor_client/: block_sending.rs  block_store.rs  block_sync.rs  mod.rs  rpc_queries.rs  rpc_queries_epoch.rs  transition_handoff.rs
metanode/src/node/rust_sync_node/: block_queue.rs  epoch_recovery.rs  fetch.rs  fetch_tests.rs  mod.rs  start.rs  sync_loop.rs
metanode/src/node/transition/: consensus_setup.rs  demotion.rs  epoch_transition.rs  mod.rs  mode_transition.rs  tx_recovery.rs  verification.rs
metanode/src/state_store/: ipc.rs  jmt_trie.rs  mdbx_store.rs  mod.rs  tests.rs  traits.rs
rbc/: message.pb.go  message.proto  rbc.go
types/: block.go  entry.go  event_log.go  receipt.go  smart_contract.go  state.go  state_db.go  transaction.go
(+116 files in other folders)
