[package]
name = "telemetry-subscribers"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Evan Chan <echan@mystenlabs.com>"]
description = "Library for common telemetry and observability functionality"
repository = "https://github.com/mystenlabs/mysten-infra"
edition = "2024"
publish = false

[dependencies]
atomic_float = "0.1"
console-subscriber = "0.4.1"
crossterm = "0.25.0"
once_cell = "1.18.0"
prometheus = "0.13.3"
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["std", "env-filter", "fmt", "json"] }
opentelemetry = { version = "0.27.1" }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["grpc-tonic"] }
tracing-opentelemetry = { version = "0.28.0" }
opentelemetry-proto = { version = "0.27" }
tokio = { version = "=1.47.1", features = ["full"] }
futures = "0.3.28"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
bytes = { version = "1.5.0", features = ["serde"] }
bytes-varint = { version = "1.1.0" }

# must use same version as opentelemetry for tonic and prost, so we can't use from
# workspace
tonic = { version = "0.12.3" }
prost = "0.13"

[dev-dependencies]
camino = "1.1.1"
