[package]
name = "consensus-core"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(msim)'] }

[dependencies]
anyhow = "1.0.71"
arc-swap = "1.5.1"
async-trait = "0.1.61"
base64 = "0.21.2"
bcs = "0.1.4"
bytes = { version = "1.5.0", features = ["serde"] }
cfg-if = "1.0.0"
consensus-config = { path = "../config" }
consensus-types = { path = "../types" }
dashmap = "5.5.3"
enum_dispatch = "^0.3"
eyre = "0.6.8"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c" }
futures = "0.3.28"
http = "1"
itertools = "0.13.0"
quinn-proto = "0.11.7"
mockall = "0.11.4"
mysten-common = { path = "../../../crates/mysten-common" }
mysten-metrics = { path = "../../../crates/mysten-metrics" }
mysten-network = { path = "../../../crates/mysten-network" }
nom = "7.1.3"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
prometheus = "0.13.3"
prost = "0.14.1"
rand = "0.8.5"
rustls = "0.23"
serde = { version = "1.0.144", features = ["derive", "rc"] }
shared-crypto = { path = "../../../crates/shared-crypto" }
strum_macros = "0.26"
meta-macros = { path = "../../../crates/meta-macros" }
meta-protocol-config = { path = "../../../crates/meta-protocol-config" }
meta-tls = { path = "../meta-tls" }
tap = "1.0"
tempfile = "3.8"
thiserror = "1.0.40"
tokio = "=1.47.1"
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tokio-util = "0.7.10"
tonic = { version = "0.14.2", features = ["tls-webpki-roots", "transport", "zstd"] }
tonic-prost = "0.14.2"
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1.37"
typed-store = { path = "../../../crates/typed-store" }
tonic-rustls = "0.3.0"
# Use local copy of meta-http (without dev-dependencies)
meta-http = { path = "../meta-http" }

[dev-dependencies]
criterion = { version = "0.5.0", features = ["async", "async_tokio", "html_reports"] }
rstest = "0.16.0"
tempfile = "3.8"
telemetry-subscribers = { path = "../../../crates/telemetry-subscribers" }

[build-dependencies]
tonic-build = "0.14.2"

[[bench]]
name = "commit_finalizer_bench"
harness = false

[[bench]]
name = "transaction_throughput_bench"
harness = false

